<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mafi İçerik Platformu</string>
    <string name="title_home">Ana Sayfa</string>
    <string name="title_content">İçerikler</string>
    <string name="title_profile">Profil</string>
    <string name="title_settings">Ayarlar</string>
    <string name="hint_email">E-posta</string>
    <string name="hint_password">Şifre</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_register">Kayıt Ol</string>
    <string name="button_add_content">İçerik Ekle</string>
    <string name="content_type_icon">İçerik Tipi İkonu</string>
    <string name="button_summarize">Özetle</string>
    <string name="button_expand">Genişlet</string>
    <string name="hint_content">İçeriğinizi buraya yazın...</string>
    <string name="placeholder_button_3">Buton 3</string>
    <string name="placeholder_button_4">Buton 4</string>
</resources>
